--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,8 @@
 .swiper-button-prev {
   display: none !important;
 }
+
+/*Responsive*/
 @media (min-width: 991px) and (max-width: 1100px) {
   .pricing_top-content {
     height: auto;
@@ -58,7 +60,11 @@
   }
 }
 @media (min-width: 991px) and (max-width: 1210px) {
-  .step_txt-cnt {
-    height: auto;
+  .summarize_cards-wrapper {
+    grid-template-columns: 1fr 1fr;
   }
+}
+/*Hover button*/
+.button.is-gradient:hover {
+  background: linear-gradient(84deg, #203d83 0%, #1478be 100%);
 }
